# real-time-speech-translation-mvp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  latency_summary.json  minio-lifecycle.json  package.json  pytest.ini
.github/: agent-comparison.md  custom-agent-guide.md
.github/agents/: 01-architect.agent.md  02-planner.agent.md  03-analyst.agent.md  03-editor.agent.md  04-finalizer.agent.md  06-security.agent.md  07-implementer.agent.md  08-qa.agent.md  09-uat.agent.md  11-devops.agent.md  12-retrospective.agent.md  live-testing.agent.md
.github/chatmodes/: planner.chatmode.md
.github/skills/: README.md
Analysis-and-design-of-a-platform-for-real-time-speech-translation-/: Software Architecture in Practice, 4th Ed - Len Bass, Paul Clements, Rick Kazman.md
Analysis-and-design-of-a-platform-for-real-time-speech-translation-/Engineering AI Systems_ Architecture and Devops Essentials/: Engineering AI Systems_ Architecture and Devops Essentials .md
Analysis-and-design-of-a-platform-for-real-time-speech-translation-/case description/: Frontpage.tex  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  problemformulering.tex  references.bib  search_strategy_guide.tex  thesis_statement.tex
Analysis-and-design-of-a-platform-for-real-time-speech-translation-/docs/: MVP-FIRST_PLAN.md  api-integration-flows.md  deployment-scaling.md  diagram-standards.md  end-to-end-flows.md  error-handling-flows.md  event-driven-flows.md  metrics-research-data-flows.md  microservice-independence.md  performance-monitoring.md
Analysis-and-design-of-a-platform-for-real-time-speech-translation-/report/: abstract.tex  chap-analysis-and-design.tex  chap-appendix.tex  chap-background.tex  chap-conclusion.tex  chap-evaluation.tex  chap-implementation.tex  chap-introduction.tex  frontpage.tex  main.aux  main.bbl  main.blg  main.tex  main.toc  mybibliography.bib
Analysis-and-design-of-a-platform-for-real-time-speech-translation-/systematic-literatur-review/: dedup_script.py  exec_dedup.py  protocol.json  protocol_logic.md  protocol_v2.json  run_dedup.py  search_report.md
agent-output/analysis/: 001-shared-infrastructure-analysis.md  002-audio-message-size-analysis.md  003-asr-ingestion-unknowns-analysis.md  003-translation-service-analysis.md  004-traceability-and-latency-analysis.md  005-ingress-gateway-analysis.md  005-traceability-and-latency-governance-analysis.md  006-ingress-gateway-research-gaps.md  007-ingress-gateway-depth-analysis.md  008-tts-voice-context-unknowns-analysis.md  010-text-to-speech-analysis.md  010-text-to-speech-plan-analysis.md  011-claim-check-unknowns-analysis.md  011-onnx-tts-model-selection-analysis.md  011-schema-registry-readiness-analysis.md  012-text-to-speech-claim-check-analysis.md  013-artifact-persistence-unknowns-analysis.md  013-minio-default-credentials-analysis.md  014-artifact-persistence-blockers-analysis.md  015-artifact-persistence-rollout-research-gaps.md  016-translation-test-infra-analysis.md  027-technical-unknowns-analysis.md  028-kafka-consumer-group-recovery-baseline.md  vad_pipeline_a_latency.json
agent-output/architecture/: 001-shared-infrastructure-architecture-findings.md  002-shared-infrastructure-plan-architecture-findings.md  003-audio-payload-policy-architecture-findings.md  003-translation-service-architecture-findings.md  004-roadmap-alignment-validation.md  005-asr-service-architecture-findings.md  006-roadmap-alignment-validation-tts.md  006-tts-voice-cloning-architecture-findings.md  007-v0.3.0-roadmap-alignment-validation.md  008-ingress-gateway-roadmap-alignment.md  009-voice-activity-detection-architecture-findings.md  012-tts-roadmap-alignment-validation.md  (+24 more)
docs/: test-runner.md
report-output/: outline_plan.md
services/asr/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
services/asr/src/asr_service/: config.py  main.py  processing.py  transcriber.py
services/asr/tests/: test_integration_asr.py  test_processing.py  test_startup.py  test_transcriber.py
services/asr/tools/: benchmark_latency.py
services/gateway/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
services/gateway/src/gateway_service/: __init__.py  audio.py  config.py  limits.py  main.py  protocol.py  startup.py
services/gateway/tests/: test_audio.py  test_limits.py  test_protocol.py  test_startup.py
services/translation/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
services/translation/src/translation_service/: config.py  main.py  translator.py
services/translation/tests/: test_integration_translation.py  test_startup.py  test_translation_processing.py  test_translator.py
services/tts/: CHANGELOG.md  Dockerfile  README.md  minio-lifecycle.json  pyproject.toml
services/tts/src/tts_service/: audio.py  config.py  factory.py  kokoro.py  main.py  processing.py  startup.py  synthesizer.py  synthesizer_factory.py  synthesizer_interface.py  synthesizer_kokoro.py
services/tts/tests/: conftest.py  test_audio_helpers.py  test_config.py  test_kokoro.py  test_main.py  test_processing.py  test_startup.py  test_storage.py  test_synthesizer.py  test_tts_processing.py
services/tts/tools/: tts_validation.py
services/vad/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
services/vad/src/vad_service/: __init__.py  config.py  main.py  processing.py  vad.py
services/vad/tests/: test_processing.py  test_startup.py
shared/speech-lib/: CHANGELOG.md  README.md  pyproject.toml
shared/speech-lib/src/speech_lib/: README.md  __init__.py  claim_check.py  constants.py  consumer.py  consumer_config.py  correlation.py  events.py  producer.py  schema_registry.py  serialization.py  startup.py  storage.py
shared/speech-lib/src/speech_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared/speech-lib/tests/: test_claim_check.py  test_consumer.py  test_consumer_config.py  test_events.py  test_serialization.py
tests/: requirements.txt  smoke_infra.py
(+223 files in other folders)
