[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-service"
version = "0.2.0"
description = "ASR microservice for the speech translation MVP."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Speech Platform Team"}]
dependencies = [
  "numpy>=1.26.0",
  "soundfile>=0.12.1",
  "librosa>=0.10.1",
  "transformers>=4.36.0",
  "confluent-kafka>=2.5.0",
  "torch>=2.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "integration: marks integration tests that require Docker/Kafka",
]
