[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gateway-service"
version = "0.3.0-dev"
description = "Ingress gateway service for WebSocket audio streaming."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Speech Platform Team"}]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "confluent-kafka>=2.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "integration: marks integration tests that require Docker/Kafka",
]
