[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-service"
version = "0.5.0"
description = "Text-to-speech microservice for the speech translation MVP."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Speech Platform Team"}]
dependencies = [
  "boto3>=1.34.0",
  "confluent-kafka>=2.5.0",
  "huggingface-hub>=0.24.0",
  "indextts @ git+https://github.com/index-tts/index-tts.git",
  "librosa>=0.10.2",
  "numpy>=1.26.0",
  "omegaconf>=2.3.0",
  "prometheus-client>=0.20.0",
  "safetensors>=0.5.2",
  "sentencepiece>=0.2.1",
  "soundfile>=0.12.1",
  "textstat>=0.7.10",
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
  "transformers>=4.36.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "integration: marks integration tests that require Docker/Kafka",
]
