[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-service"
version = "0.5.0"
description = "Text-to-speech microservice for the speech translation MVP."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Speech Platform Team"}]
dependencies = [
  "boto3>=1.34.0",
  "confluent-kafka>=2.5.0",
  "huggingface-hub>=0.24.0",
  "onnxruntime>=1.17.0",
  "misaki[en]>=0.4.0",
  "soundfile>=0.12.1",
  "numpy>=1.26.0",
  "prometheus-client>=0.20.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "integration: marks integration tests that require Docker/Kafka",
]
