[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-service"
version = "0.5.0"
description = "Text-to-speech microservice for the speech translation MVP."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Speech Platform Team"}]
dependencies = [
  "confluent-kafka>=2.5.0",
  "numpy>=1.26.0",
  "soundfile>=0.12.1",
  "onnxruntime>=1.18.0; python_version < '3.14'",
  "huggingface-hub>=0.20.0",
  "phonemizer>=3.2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "integration: marks integration tests that require Docker/Kafka",
]
