[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-lib"
version = "0.1.0"
description = "Shared contract helpers for the speech translation MVP."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Speech Platform Team"}]
dependencies = [
  "fastavro>=1.9.0",
  "boto3>=1.28.0",
  "requests>=2.31.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
